util refactoring, removing PMD issues
SVN-Revision: 17546